# Wenjim

./: .dockerignore  .env  .gitignore  Dockerfile  Dockerfile_envoy  Dockerfile_envoy_prod  Dockerfile_envoy_staging  Makefile  README.md  build_protos  docker-compose.yaml  envoy.yaml  envoy_prod.yaml  envoy_staging.yaml  flake.nix  renovate.json  shell.nix
.devcontainer/: devcontainer.json
.github/workflows/: build-docker.yaml  build.yaml  docker-prod.yaml  docker-scraper-staging.yaml  docker-scraper.yaml  docker-staging.yaml  docker.yaml  flake.yaml
backend/: .env.dev  .gitignore  Dockerfile  README.md  docker-compose.yaml  history.py  manage.py  migrate.py  move.py  pyproject.toml  requirements.txt  server.py  shell.nix  util.py  utility.py  weekly.py  wsgi.py
backend/migrations/: 001_initial.py  002_materialized_view.py  003_materialized_tracking.py
backend/protos/: countday.proto
backend/scraper/: .gitignore  Dockerfile  README.md  docker-compose.yaml  models.py  pyproject.toml  requirements.txt  scraper.py
envoy/: Dockerfile  envoy-entrypoint.sh  envoy.yaml
frontend/: .dockerignore  .env.deploy  .env.deployment  .env.development  .gitignore  .tmpenv  Dockerfile  Dockerfile.prod  README.md  build.sh  compile-proto.sh  docker-compose.yaml  entrypoint.sh  middleware.ts  next.config.js  package-lock.json  package.json  tailwind.config.js
frontend/api/: [...slug].tsx  grpc.ts  hooks.ts  interfaces.ts  service.ts
frontend/app/: index.tsx  layout.tsx  page.tsx  provider.tsx  shell.tsx
frontend/components/: barChart.tsx  calendarChart.tsx  dateInput.tsx  error.tsx  (+14 more)
frontend_next/: package.json
(+40 files in other folders)
