[tool.poetry]
name = "wenjim-backend"
version = "0.1.0"
description = ""
authors = ["markbeep <mrkswrn@gmail.com>"]
readme = "README.md"
packages = [{include = "../backend"}]

[tool.poetry.dependencies]
python = "^3.10"
Flask = "^2.2.2"
python-jwt = "^4.0.0"
gunicorn = "^20.1.0"
peewee = "^3.15.4"
python-dateutil = "^2.8.2"
Flask-Compress = "^1.13"
pytz = "^2022.7.1"
grpcio = "^1.51.1"
grpcio-tools = "^1.51.1"
sonora = "^0.2.2"
peewee-migrate = "^1.7.1"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
black = "^22.12.0"
requests = "^2.28.2"
poethepoet = "^0.22.0"

[build-system]
requires = ["poetry-core", "poetry>=1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "server:serve"

[tool.poe.tasks]
build = """
    python -m grpc_tools.protoc
        -I../proto
        --python_out=.
        --pyi_out=.
        --grpc_python_out=.
        ../proto/generated/*.proto
"""
