[tool.poetry]
name = "wenjim-scraper"
version = "0.1.0"
description = ""
authors = ["markbeep <mrkswrn@gmail.com>"]
readme = "README.md"
packages = [{include = "../scraper"}]

[tool.poetry.dependencies]
python = "^3.11"
peewee = "^3.15.4"
requests = "^2.28.2"
pytz = "^2022.7.1"
python-dateutil = "^2.8.2"
psycopg2 = "^2.9.6"

[tool.poetry.group.dev.dependencies]
pylint = "^3.0.0"
black = "^23.0.0"

[build-system]
requires = ["poetry-core", "poetry>=1.3"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
start = "scraper:main"
